Add a way to pass jvm args via bootRun