@@ -13,8 +13,17 @@ ext {
     moduleName = 'FredBoat'
 }
 
-//compiling tests during bootRun increases the likelyhood of catching broken tests locally instead of on the CI
-bootRun.dependsOn compileTestJava
+bootRun {
+    //compiling tests during bootRun increases the likelyhood of catching broken tests locally instead of on the CI
+    dependsOn compileTestJava
+
+    //pass in custom jvm args
+    // source: https://stackoverflow.com/a/25079415
+    // example: ./gradlew bootRun -PjvmArgs="--illegal-access=debug -Dwhatever=value"
+    if (project.hasProperty('jvmArgs')) {
+        jvmArgs project.jvmArgs.split('\\s+')
+    }
+}
 
 bootJar {
     archiveName = "FredBoat.jar"
